<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/register_layout_top_padding"
    tools:context="com.mad.mellon.Register">


    <LinearLayout
        android:id="@+id/fullNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/register_field_side_padding"
        android:paddingRight="@dimen/register_field_side_padding">

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_name_label"
            android:textSize="@dimen/register_text_size" />

        <EditText
            android:textCursorDrawable="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/fullNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/full_name_text"
            android:textSize="@dimen/register_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/register_field_side_padding"
        android:paddingRight="@dimen/register_field_side_padding"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_label"
            android:textSize="@dimen/register_text_size" />

        <EditText
            android:textCursorDrawable="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_text"
            android:textSize="@dimen/register_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/register_spinner_vertical_padding"
        android:paddingBottom="@dimen/register_spinner_vertical_padding"
        android:paddingLeft="@dimen/register_field_side_padding"
        android:paddingRight="@dimen/register_field_side_padding"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_type_label"
            android:textSize="@dimen/register_text_size" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/account_type"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/register_field_side_padding"
        android:paddingRight="@dimen/register_field_side_padding"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password_label"
            android:textSize="@dimen/register_text_size" />

        <EditText
            android:textCursorDrawable="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_text"
            android:textSize="@dimen/register_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/register_field_side_padding"
        android:paddingRight="@dimen/register_field_side_padding"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryBackground"
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text" />
    </LinearLayout>

    </LinearLayout>
