<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:paddingBottom="@dimen/item_padding"
        android:paddingRight="@dimen/item_padding"
        android:paddingLeft="@dimen/item_padding"
        android:paddingTop="@dimen/item_padding"
        android:background="@drawable/recycler_view_individual_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/white"
                android:id="@+id/requestedDate"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/date_dummy_text"
                android:textSize="20sp"/>
            <TextView
                android:textColor="@color/white"
                android:id="@+id/requestedDay"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/day_dummy_text"
                android:textSize="20sp"/>
        </LinearLayout>



        <Button
            android:id="@+id/removeRequestedButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/colorPrimaryBackground"
            android:textColor="@color/colorPrimary"
            android:layout_height="match_parent"
            android:text="@string/remove_text"/>
    </LinearLayout>
</RelativeLayout>