<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/timeslotLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:id="@+id/rosterStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time_dummy_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/recycler_view_text_size"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:id="@+id/rosterEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/end_time_dummy"
                    android:textSize="@dimen/recycler_view_text_size"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:id="@+id/rosterName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/name_dummy_text"
                    android:textSize="@dimen/recycler_view_text_size"/>
            </LinearLayout>


    </LinearLayout>
</RelativeLayout>