<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/rosterDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rosterDate"
                android:textAlignment="center"
                android:textSize="@dimen/welcome_text_size"
                android:text="@string/roster_details_dummy_text"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rosterPremise"
                android:textAlignment="center"
                android:textSize="@dimen/welcome_text_size"
                android:text="@string/roster_details_dummy_text_premise"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:id="@+id/rosterStartTimeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time_text"
                    android:textSize="@dimen/premise_string_size"/>
                <TextView
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:id="@+id/rosterEndTimeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time_text"
                    android:textSize="@dimen/premise_string_size"/>
                <TextView
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:id="@+id/rosterNameLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_name_text"
                    android:textSize="@dimen/premise_string_size"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mainRosterContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rosterDetailsRecyclerView">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_below="@+id/rosterDetailsLayout"
            android:layout_alignParentBottom="true"
            android:id="@+id/buttonsLayout"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/deleteButton"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>