<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:gravity="bottom"
        android:layout_weight="100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/labelLayout"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/login_text_size"
                android:hint="@string/email_text"/>

            <EditText
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/passwordField"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_text_size"
                android:hint="@string/password_text" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryBackground"
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_text" />

            <Button
                android:layout_marginTop="@dimen/add_roster_padding_vertical"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryBackground"
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_text" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>