<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="@dimen/welcome_text_account_margin_top"
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:id="@+id/welcomeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/welcome_text_account_text_size"
                android:layout_weight="1"
                android:text="@string/full_name_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/email_text_account_margin_top"
            android:layout_below="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/welcome_text_account_text_size"
                android:layout_weight="1"
                android:text="@string/email_text" />
        </LinearLayout>





        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryBackground"
                android:layout_marginBottom="@dimen/button_margin"
                android:text="@string/logout_text" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_bar_height"
        android:layout_gravity="bottom">
        <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nav_bottom"
            android:background="@drawable/white_grey_border_top"
            app:menu="@menu/admin_navigation">
        </android.support.design.widget.BottomNavigationView>
    </LinearLayout>
</LinearLayout>




